# I-am-the-Elder-God

./: .travis.yml  Atlas_Game_Index  Cargo.toml  README.md  i_am_the_elder_god.js  i_am_the_elder_god.wasm  index.html
src/: main.rs
src/game_logic/: draw_helper.rs  main_state.rs  mod.rs  music_player.rs  scene_type.rs
src/game_logic/utility/: draw_plane_manager.rs  mod.rs
src/gameplay_logic/: animator.rs  entities.rs  game_board.rs  game_levels.rs  gameplay_type.rs  mod.rs
src/scenes/: game.rs  intro.rs  mod.rs  outro.rs
static/: Atlas_Game_Index  Atlas_Intro_Index  Atlas_Outro_Index  Atlas_Tile_Index
