[package]
name = "I-am-the-elder-god"
version = "0.1.0"
authors = ["WushuWorks <games@wushuworks.com>"]
edition = "2018"

[dependencies]
# More features: "collisions", "complex_shapes", "immi_ui", "sounds", "gamepads"
# Here everything is enabled because more power = more better
quicksilver = { version = "0.3.10", default-features = true}
nalgebra = "0.18.0"
ncollide2d = "0.19.2"